...
        android:id="@+id/menu_image_style"
        android:title="@string/image_style"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reimport_source"
        android:title="@string/reimport_book_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_update_toc"
        android:title="@string/update_toc"
        app:showAsAction="never" />
...
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reader_more"
        android:title="@string/reader_menu_more"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_reader_all_features"
        android:title="@string/reader_menu_all_features"
        android:visible="false"
        app:showAsAction="never" />

</menu>

